# na-alliances-discord-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
na_alliances_discord_bot/: __init__.py  channels.py  client.py  copypasta.py  embed.py  naspreadsheet.py  timers.py  util.py
